; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_read_connect_arg.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_read_connect_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OT_SQLIDHACK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @read_connect_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_connect_arg(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @OT_SQLIDHACK, align 4
  %8 = call i8* @psql_scan_slash_option(i32 %6, i32 %7, i8* %5, i32 1)
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %31

12:                                               ; preds = %1
  %13 = load i8, i8* %5, align 1
  %14 = icmp ne i8 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %31

17:                                               ; preds = %12
  %18 = load i8*, i8** %4, align 8
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %17
  %23 = load i8*, i8** %4, align 8
  %24 = call i64 @strcmp(i8* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %22, %17
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @free(i8* %27)
  store i8* null, i8** %2, align 8
  br label %31

29:                                               ; preds = %22
  %30 = load i8*, i8** %4, align 8
  store i8* %30, i8** %2, align 8
  br label %31

31:                                               ; preds = %29, %26, %15, %11
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i8* @psql_scan_slash_option(i32, i32, i8*, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
